--- a/package.json
+++ b/package.json
@@ -15,38 +15,26 @@
         "url": "https://github.com/primefaces/primeng.git"
     },
     "devDependencies": {
+        "@angular-devkit/build-angular": "~0.6.3",
+        "@angular-devkit/core": "^0.6.3",
         "@angular/animations": "^6.0.2",
+        "@angular/cli": "^6.0.3",
         "@angular/common": "^6.0.2",
         "@angular/compiler": "^6.0.2",
+        "@angular/compiler-cli": "^6.0.2",
         "@angular/core": "^6.0.2",
         "@angular/forms": "^6.0.2",
         "@angular/http": "^6.0.2",
+        "@angular/language-service": "^6.0.2",
         "@angular/platform-browser": "^6.0.2",
         "@angular/platform-browser-dynamic": "^6.0.2",
         "@angular/router": "^6.0.2",
-        "core-js": "^2.5.4",
-        "rxjs": "^6.0.0",
-        "zone.js": "^0.8.26",
-        "@angular/compiler-cli": "^6.0.2",
-        "@angular-devkit/build-angular": "~0.6.3",
-        "typescript": "~2.7.2",
-        "@angular/cli": "~6.0.3",
-        "@angular/language-service": "^6.0.2",
         "@types/jasmine": "~2.8.6",
         "@types/jasminewd2": "~2.0.3",
         "@types/node": "~8.9.4",
-        "codelyzer": "~4.2.1",
-        "jasmine-core": "~2.99.1",
-        "jasmine-spec-reporter": "~4.2.1",
-        "karma": "~1.7.1",
-        "karma-chrome-launcher": "~2.2.0",
-        "karma-coverage-istanbul-reporter": "~1.4.2",
-        "karma-jasmine": "~1.1.1",
-        "karma-jasmine-html-reporter": "^0.2.2",
-        "protractor": "~5.3.0",
-        "ts-node": "~5.0.1",
-        "tslint": "~5.9.1",
         "chart.js": "2.7.1",
+        "codelyzer": "~4.2.1",
+        "core-js": "^2.5.4",
         "del": "2.2.0",
         "font-awesome": "4.7.0",
         "fullcalendar": "^3.5.0",
@@ -58,10 +46,24 @@
         "gulp-uglifycss": "1.0.6",
         "install": "0.10.1",
         "intl": "1.2.5",
+        "jasmine-core": "~2.99.1",
+        "jasmine-spec-reporter": "~4.2.1",
         "jquery": "3.2.1",
+        "karma": "~1.7.1",
+        "karma-chrome-launcher": "~2.2.0",
+        "karma-coverage-istanbul-reporter": "~1.4.2",
+        "karma-jasmine": "~1.1.1",
+        "karma-jasmine-html-reporter": "^0.2.2",
         "moment": "2.18.1",
         "prismjs": "1.6.0",
+        "protractor": "~5.3.0",
         "quill": "1.1.8",
-        "web-animations-js": "2.3.1"
-    }
+        "rxjs": "^6.0.0",
+        "ts-node": "~5.0.1",
+        "tslint": "~5.9.1",
+        "typescript": "~2.7.2",
+        "web-animations-js": "2.3.1",
+        "zone.js": "^0.8.26"
+    },
+    "dependencies": {}
 }
